Fixing toggler bar on Index.html navbar to align correctly

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,6 +38,13 @@ hr{
     color:#000;
     margin:0px;
 }
+
+.navbar{
+    margin-top:50px;
+    margin-right:30px;
+}
+
+
 /*Section Hero Image*/
 
 .hero-image{
@@ -69,3 +76,11 @@ hr{
     margin:0px;
 }
 
+/*Menu Queries*/
+
+@media(min-width: 576px){
+.navbar{
+    margin-top:0px;
+    margin-right:0px;
+    }
+}
